# LLMSecEvalPipeline

./: .gitignore  LICENSE  README.md  config.yaml  prd.md  pyproject.toml  walkthrough.md
scripts/: smoke_test_codegen.py  smoke_test_sast.py
src/llmseceval/: __init__.py  config.py
src/llmseceval/code_generator/: __init__.py  base.py  extractor.py  lmstudio_generator.py  ollama_generator.py  runner.py
src/llmseceval/data_loader/: __init__.py  loader.py
src/llmseceval/sast_executor/: __init__.py  bandit_executor.py  base.py  runner.py
tests/: create_fixtures.py  test_code_generator.py  test_config.py  test_data_loader.py  test_sast_executor.py
tests/fixtures/: sample_prompts.parquet  sample_sharing.json
